rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_writebatch_create*(): ptr rocksdb_writebatch_t {.cdecl,
    importc: "rocksdb_writebatch_create", dynlib: librocksdb.}
proc rocksdb_writebatch_create_from*(rep: cstring; size: csize_t): ptr rocksdb_writebatch_t {.
    cdecl, importc: "rocksdb_writebatch_create_from", dynlib: librocksdb.}
proc rocksdb_writebatch_destroy*(a1: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_destroy", dynlib: librocksdb.}
proc rocksdb_writebatch_clear*(a1: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_clear", dynlib: librocksdb.}
proc rocksdb_writebatch_count*(a1: ptr rocksdb_writebatch_t): cint {.cdecl,
    importc: "rocksdb_writebatch_count", dynlib: librocksdb.}
proc rocksdb_writebatch_put*(a1: ptr rocksdb_writebatch_t; key: cstring;
                            klen: csize_t; val: cstring; vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_put", dynlib: librocksdb.}
proc rocksdb_writebatch_put_cf*(a1: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                               key: cstring; klen: csize_t; val: cstring;
                               vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_put_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_put_cf_with_ts*(a1: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                       key: cstring; klen: csize_t; ts: cstring;
                                       tslen: csize_t; val: cstring; vlen: csize_t) {.
    cdecl, importc: "rocksdb_writebatch_put_cf_with_ts", dynlib: librocksdb.}
proc rocksdb_writebatch_putv*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                             keys_list: cstringArray;
                             keys_list_sizes: ptr csize_t; num_values: cint;
                             values_list: cstringArray;
                             values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_putv", dynlib: librocksdb.}
proc rocksdb_writebatch_putv_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                num_keys: cint; keys_list: cstringArray;
                                keys_list_sizes: ptr csize_t; num_values: cint;
                                values_list: cstringArray;
                                values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_putv_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_merge*(a1: ptr rocksdb_writebatch_t; key: cstring;
                              klen: csize_t; val: cstring; vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_merge", dynlib: librocksdb.}
proc rocksdb_writebatch_merge_cf*(a1: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                 key: cstring; klen: csize_t; val: cstring;
                                 vlen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_merge_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_mergev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                               keys_list: cstringArray;
                               keys_list_sizes: ptr csize_t; num_values: cint;
                               values_list: cstringArray;
                               values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_mergev", dynlib: librocksdb.}
proc rocksdb_writebatch_mergev_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                  num_keys: cint; keys_list: cstringArray;
                                  keys_list_sizes: ptr csize_t; num_values: cint;
                                  values_list: cstringArray;
                                  values_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_mergev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete*(a1: ptr rocksdb_writebatch_t; key: cstring;
                               klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_delete", dynlib: librocksdb.}
proc rocksdb_writebatch_singledelete*(b: ptr rocksdb_writebatch_t; key: cstring;
                                     klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_singledelete", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_cf*(a1: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                  key: cstring; klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_delete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_cf_with_ts*(a1: ptr rocksdb_writebatch_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; klen: csize_t;
    ts: cstring; tslen: csize_t) {.cdecl,
                               importc: "rocksdb_writebatch_delete_cf_with_ts",
                               dynlib: librocksdb.}
proc rocksdb_writebatch_singledelete_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                        key: cstring; klen: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_singledelete_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_singledelete_cf_with_ts*(b: ptr rocksdb_writebatch_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; klen: csize_t;
    ts: cstring; tslen: csize_t) {.cdecl, importc: "rocksdb_writebatch_singledelete_cf_with_ts",
                               dynlib: librocksdb.}
proc rocksdb_writebatch_deletev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                                keys_list: cstringArray;
                                keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_deletev", dynlib: librocksdb.}
proc rocksdb_writebatch_deletev_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                   num_keys: cint; keys_list: cstringArray;
                                   keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_deletev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_range*(b: ptr rocksdb_writebatch_t;
                                     start_key: cstring; start_key_len: csize_t;
                                     end_key: cstring; end_key_len: csize_t) {.
    cdecl, importc: "rocksdb_writebatch_delete_range", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_range_cf*(b: ptr rocksdb_writebatch_t; column_family: ptr rocksdb_column_family_handle_t;
                                        start_key: cstring;
                                        start_key_len: csize_t; end_key: cstring;
                                        end_key_len: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_delete_range_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_rangev*(b: ptr rocksdb_writebatch_t; num_keys: cint;
                                      start_keys_list: cstringArray;
                                      start_keys_list_sizes: ptr csize_t;
                                      end_keys_list: cstringArray;
                                      end_keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_delete_rangev", dynlib: librocksdb.}
proc rocksdb_writebatch_delete_rangev_cf*(b: ptr rocksdb_writebatch_t;
    column_family: ptr rocksdb_column_family_handle_t; num_keys: cint;
    start_keys_list: cstringArray; start_keys_list_sizes: ptr csize_t;
    end_keys_list: cstringArray; end_keys_list_sizes: ptr csize_t) {.cdecl,
    importc: "rocksdb_writebatch_delete_rangev_cf", dynlib: librocksdb.}
proc rocksdb_writebatch_put_log_data*(a1: ptr rocksdb_writebatch_t; blob: cstring;
                                     len: csize_t) {.cdecl,
    importc: "rocksdb_writebatch_put_log_data", dynlib: librocksdb.}
proc rocksdb_writebatch_iterate*(a1: ptr rocksdb_writebatch_t; state: pointer; put: proc (
    a1: pointer; k: cstring; klen: csize_t; v: cstring; vlen: csize_t) {.cdecl.}; deleted: proc (
    a1: pointer; k: cstring; klen: csize_t) {.cdecl.}) {.cdecl,
    importc: "rocksdb_writebatch_iterate", dynlib: librocksdb.}
proc rocksdb_writebatch_data*(a1: ptr rocksdb_writebatch_t; size: ptr csize_t): cstring {.
    cdecl, importc: "rocksdb_writebatch_data", dynlib: librocksdb.}
proc rocksdb_writebatch_set_save_point*(a1: ptr rocksdb_writebatch_t) {.cdecl,
    importc: "rocksdb_writebatch_set_save_point", dynlib: librocksdb.}
proc rocksdb_writebatch_rollback_to_save_point*(a1: ptr rocksdb_writebatch_t;
    errptr: cstringArray) {.cdecl,
                          importc: "rocksdb_writebatch_rollback_to_save_point",
                          dynlib: librocksdb.}
proc rocksdb_writebatch_pop_save_point*(a1: ptr rocksdb_writebatch_t;
                                       errptr: cstringArray) {.cdecl,
    importc: "rocksdb_writebatch_pop_save_point", dynlib: librocksdb.}
##  Write batch with index
